# safe_mrc_can

./: .gitignore  CMakeLists.txt  README.md  SafeMRCCANConfig.cmake.in  safemrc-can.pc.in
.claude/: settings.local.json
docs/: CAN_Protocol_Handoff.md
docs/superpowers/plans/: 2026-03-26-safemrc-can-driver.md
docs/superpowers/specs/: 2026-03-26-safemrc-can-driver-design.md
examples/: demo.cpp
include/safemrc/: safemrc.hpp
include/safemrc/can/: can_device.hpp  can_device_collection.hpp  can_socket.hpp
include/safemrc/mrc/: mrc_device.hpp  mrc_protocol.hpp  mrc_state.hpp
python/: CMakeLists.txt  pyproject.toml
python/examples/: demo.py
python/src/: safemrc_can.cpp
src/safemrc/: safemrc.cpp
src/safemrc/can/: can_device_collection.cpp  can_socket.cpp
src/safemrc/mrc/: mrc_device.cpp  mrc_protocol.cpp  mrc_state.cpp
tests/: CMakeLists.txt  test_can_device_collection.cpp  test_integration.cpp  test_mrc_protocol.cpp  test_mrc_state.cpp
